--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Women in Avation - Sea to Sky Chapter Donation Page</h1>
+<head>
+  
+</head>
+
+<body>
+  <h1>Women in Avation - Sea to Sky Chapter Donation Page</h1>
+</body>
+
+
