--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <head>
-  
+  <script src="https://zeffy-scripts.s3.ca-central-1.amazonaws.com/embed-form-script.min.js"></script>
 </head>
 
 <body>
   <h1>Women in Avation - Sea to Sky Chapter Donation Page</h1>
+  zeffy-form-link="https://www.zeffy.com/embed/donation-form/support-the-bc-aviation-community?modal=true"
 </body>
 
 
