--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <body>
   <h1>Women in Avation - Sea to Sky Chapter Donation Page</h1>
-  zeffy-form-link="https://www.zeffy.com/embed/donation-form/support-the-bc-aviation-community?modal=true"
+  <button zeffy-form-link="https://www.zeffy.com/embed/donation-form/support-the-bc-aviation-community?modal=true">Donate Now</button>
 </body>
 
 
