--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </head>
 
 <body>
-<div>
+<div class="main">
     <h1>Women in Avation - Sea to Sky Chapter Donation Page</h1>
   <button zeffy-form-link="https://www.zeffy.com/embed/donation-form/support-the-bc-aviation-community?modal=true">Donate Now</button>
 </div>
