--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
+<!DOCTYPE html>
+<html>
 <head>
+  <link rel="stylesheet" href="style.css">
   <script src="https://zeffy-scripts.s3.ca-central-1.amazonaws.com/embed-form-script.min.js"></script>
 </head>
 
@@ -9,5 +12,5 @@
 </div>
 
 </body>
-
+</html>
 
