--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="main">
     <h1>Women in Avation - Sea to Sky Chapter Donation Page</h1>
-  <button zeffy-form-link="https://www.zeffy.com/embed/donation-form/support-the-bc-aviation-community?modal=true">Donate Now</button>
+  <button class="primary-button" zeffy-form-link="https://www.zeffy.com/embed/donation-form/support-the-bc-aviation-community?modal=true">Donate Now</button>
 </div>
 
 </body>
