--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://zeffy-scripts.s3.ca-central-1.amazonaws.com/embed-form-script.min.js"></script>
 </head>
-<!-- change for commit-->
 <body>
 <div class="main">
-    <h1>Women in Avation - Sea to Sky Chapter Donation Page</h1>
+  <div class="donate-block>
+        <h1>Women in Avation - Sea to Sky Chapter Donation Page</h1>
   <button class="primary-button" zeffy-form-link="https://www.zeffy.com/embed/donation-form/support-the-bc-aviation-community?modal=true">Donate Now</button>
+  </div>
+
 </div>
 
 </body>
