--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="main">
-  <div class="donate-block>
+  <div class="donate-block">
         <h1>Women in Avation - Sea to Sky Chapter Donation Page</h1>
   <button class="primary-button" zeffy-form-link="https://www.zeffy.com/embed/donation-form/support-the-bc-aviation-community?modal=true">Donate Now</button>
   </div>
