--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <body>
   <script>
     window.addEventListener("load", (event) => {
+      document.getElementsByTagName("body")[0].getElementsByTagName("div")[0].remove();
   document.getElementById("donate-button").click();
+      
 });
   </script>
 <div class="main">
