--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <script>
-    window.addEventListener("load", (event) => {
+    window.addEventListener("DOMContentLoaded", (event) => {
       document.getElementsByTagName("body")[0].getElementsByTagName("div")[1].remove();
   document.getElementById("donate-button").click();
       
