--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
   <script>
     window.addEventListener("DOMContentLoaded", (event) => {
-      document.getElementsByTagName("body")[0].getElementsByTagName("div")[1].remove();
+      // if any more div tags are added, change
+      document.getElementsByTagName("body")[0].getElementsByTagName("div")[2].remove();
   document.getElementById("donate-button").click();
       
 });
