--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <script>
     window.addEventListener("DOMContentLoaded", (event) => {
       // if any more div tags are added, change
-      document.getElementsByTagName("body")[0].getElementsByTagName("div")[2].remove();
+      document.getElementsByTagName("body")[0].getElementsByTagName("div")[3].remove();
   document.getElementById("donate-button").click();
       
 });
   </script>
+  <div class="bg-overlay">
+  </div>
 <div class="main">
   <div class="donate-block">
         <h1>Women in Avation - Sea to Sky Chapter Donation Page</h1>
