--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     window.addEventListener("DOMContentLoaded", (event) => {
       // if any more div tags are added, change
       document.getElementsByTagName("body")[0].getElementsByTagName("div")[3].remove();
+      document.getElementsByClassName("css-lgn281")[0].remove();
   document.getElementById("donate-button").click();
       
 });
