--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       // if any more div tags are added, change
       document.getElementsByTagName("body")[0].getElementsByTagName("div")[3].remove();
       if(document.getElementsByClassName("css-lgn281")[0] !== null){
-        document.getElementsByClassName("css-lgn281")[0].remove();
+        document.getElementsByClassName("css-lgn281")[0].classList.add("hide");
+                document.getElementsByClassName("css-lgn281")[0].classList.remove("css-lgn281");
       }
   document.getElementById("donate-button").click();
       
