--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
       // if any more div tags are added, change
       document.getElementsByTagName("body")[0].getElementsByTagName("div")[3].remove();
   document.getElementById("donate-button").click();
-const element = document.getElementsByClassName("css-lgn281")[1];
+});
+
+  window.addEventListener("load", (event) => {
 if (element) {
     element.classList.add("hide");
     element.classList.remove("css-lgn281");
 }
-      
 });
   </script>
 
