--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 });
 
   window.addEventListener("load", (event) => {
+    const element = document.getElementsByClassName("css-lgn281")[0];
 if (element) {
     element.classList.add("hide");
     element.classList.remove("css-lgn281");
