--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <script>
     window.addEventListener("DOMContentLoaded", (event) => {
       // if any more div tags are added, change
-      document.getElementsByTagName("body")[0].getElementsByTagName("div")[3].remove();
+      const body = document.getElementsByTagName("body")[0];
+      body.getElementsByTagName("div")[3].remove();
+      body.getElementsByTagName("div")[3].classList.add("show");
   document.getElementById("donate-button").click();
 });
 
