--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
   </script>
 
 <div class="main">
-  <div class="bg-overlay">  </div>
-      <div class="donate-block">
+  <div class="bg-overlay">
+          <div class="donate-block">
         <!--<h1>Women in Avation - Sea to Sky Chapter Donation Page</h1>-->
-  
-  </div>
-</div>
   <button class="primary-button" id="donate-button" zeffy-form-link="https://www.zeffy.com/embed/donation-form/support-the-bc-aviation-community?modal=true">Donate Now</button>
+  </div>
+  </div>
+
+</div>
+  
 
 
 </body>
