--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="bg-overlay">
           <div class="donate-block">
         <!--<h1>Women in Avation - Sea to Sky Chapter Donation Page</h1>-->
-  <button class="primary-button" id="donate-button" zeffy-form-link="https://www.zeffy.com/embed/donation-form/support-the-bc-aviation-community?modal=true">Donate Now</button>
+  <button class="primary-button" id="donate-button" zeffy-form-link="https://www.zeffy.com/embed/donation-form/support-the-bc-aviation-community?modal=true">Donate to Sea To Sky WAI</button>
   </div>
   </div>
 
