--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="main">
   <div class="bg-overlay">
           <div class="donate-block">
-            <img class="wai-image" src="https://images.squarespace-cdn.com/content/678c3e6713c4c85ce6af7e2d/2b2c3099-4992-48cc-bbaa-c9072c4e0bf6/wai+logo.png?content-type=image%2Fpng">
+            <img class="wai-image" src="https://github.com/noahvonk/SeaToSkyWAIDonationPage/blob/main/WAISTK.png">
   <button class="primary-button" id="donate-button" zeffy-form-link="https://www.zeffy.com/embed/donation-form/support-the-bc-aviation-community?modal=true">Donate to Sea To Sky WAI</button>
   </div>
   </div>
