--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="main">
   <div class="bg-overlay">
           <div class="donate-block">
-            <img class="wai-image" src="https://github.com/noahvonk/SeaToSkyWAIDonationPage/blob/main/WAISTK.png">
+            <img class="wai-image" src="https://github.com/noahvonk/SeaToSkyWAIDonationPage/blob/main/WAISTK.png?raw=true">
   <button class="primary-button" id="donate-button" zeffy-form-link="https://www.zeffy.com/embed/donation-form/support-the-bc-aviation-community?modal=true">Donate to Sea To Sky WAI</button>
   </div>
   </div>
